# simple-chat-server-python

./: README.md
docs/: curls.txt
src/: app.py  app_config.py  app_router.py  logging-conf.ini  pyproject.toml
src/rest/: chat_request.py  chat_response.py
