[tool.poetry]
name = "Simple Chat"
version = "0.1.0"
description = ""
authors = ["Frank Hu"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.23.2"
aiohttp = "^3.9.5"
requests = "^2.32.3"
pydantic="^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "default"

